--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 *{
     font-family: 'Roboto', sans-serif;
+}
+
+body{
     margin: auto;
 }
 
 .topContainer{
     background-color: #1F2937;
-    justify-content: center;
+    justify-content: space-between;
     padding: 1% 10%;
     height: 400px;
 }
@@ -13,24 +16,34 @@
 .navContainer{
     background-color: #1F2937;
     gap: 20px;
-    justify-content: center;
     display: flex;
+    justify-content: space-between;
+}
+
+.navContainer .logo{
+    flex-basis: 50%;
+}
+
+.navContainer-option{
+    font-size:18px;
+    color: rgba(220, 220, 220, 0.765);
+}
+
+.navContainer-option:hover{
+    background-color: cornflowerblue;
 }
 
 .top-header-content-container{
-    justify-content: center;
+    padding-top: 5%;
     display: flex;
 }
 
-.top-header-content-container .text{
-    display: flex;
-    flex-direction: column;
+.hero-layout-container{
+    flex-basis: 50%;
 }
 
-
-.top-header-content-container .image{
+.image{
     height:200px;
-    flex-basis:55%;
     background-color: #E5E7EB;
 }
 
@@ -38,6 +51,18 @@
     font-size:48px;
     font-weight: 800;
     color: #F9FAF8
+}
+
+.sign-up-button{
+    background-color: #3882F6;
+    color: white;
+    border-radius: 3px; 
+    padding: 10px;
+    width: 100px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    text-align: center;
 }
 
 .hero-logo-text{
@@ -48,10 +73,111 @@
 
 .hero-secondary-text{
     font-size:18px;
-    color: #E5E7EB
+    color: rgba(220, 220, 220, 0.765);
 }
 
-.navContainer .logo{
-    flex-basis: 50%;
+.generic-container{
+    justify-content:center;
+    height: 300px;
+    background-color: white;
+}
+
+.information-header-text{
+    text-align: center;
+    padding-top: 1%;
+    font-size:36px;
+    font-weight: bold;
+    color: #1F2937
+}
+
+.cards-container{
+    display: flex;
+    justify-content: center;
+}
+
+.card-container{
+    height: 300px;
+    width: 150px;
+    padding: 3% 1%;
+    align-items: center;
+    text-align: center;
+}
+
+.card{
+    border-radius: 10px; 
+    height :150px;
+    width: 150px;
+    row-gap: 10px;
+    border: 4px solid #3882F6;
+}
+
+.card-text{
+    font-size:18px;
+    border-color: none;
+    color: darkgray;
+}
+
+.quote-section-container{
+    height:200px;
+    background-color: #E5E7EB;
+    align-content: center;
+    text-align: center;
+}
+
+.quote-text{
+    font-size: 36px;
+    font-weight: lighter;
+    color:#1F2937;
+    font-style: italic;
+}
+
+.call-to-action-container{
+    padding: 2% 10%;
+    height: 80%;
+    width : 80%;
+    align-items: center;
+}
+
+.call-to-action-card{
+    padding: 2% 10%;
+    display: flex;
+    border-radius: 10px;
+    background-color: #3882F6; 
+}
+
+.call-to-action-text-container{
+    flex-basis: 60%;
+}
+
+.call-to-action-button-container{
+    flex-basis: 40%;
+    align-items: center;
+    text-align: center;
+}
+
+.call-to-action-text-container .header{
+    font-weight: bold;
+    color: white;
+}
+
+.call-to-action-text-container .subtitle{
+    color: darkgray;
+}
+
+.call-to-action-header-button{
+    background-color: #3882F6;
+    color: white;
+    border-radius: 3px; 
+    border : 2px solid white;
+    padding: 10px;
+    width: 100px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.call-to-action-header-text{
+    color: white;
+    font-weight: bold;
 }
 
