--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body{
 
 .image{
     height:200px;
+    align-content: center;
+    text-align: center;
     background-color: #E5E7EB;
 }
 
@@ -56,7 +58,7 @@ body{
 .sign-up-button{
     background-color: #3882F6;
     color: white;
-    border-radius: 3px; 
+    border-radius: 8px; 
     padding: 10px;
     width: 100px;
     font-size: 16px;
@@ -76,9 +78,9 @@ body{
     color: rgba(220, 220, 220, 0.765);
 }
 
-.generic-container{
+.information-container{
     justify-content:center;
-    height: 300px;
+    height: 400px;
     background-color: white;
 }
 
@@ -118,7 +120,7 @@ body{
 }
 
 .quote-section-container{
-    height:200px;
+    height:400px;
     background-color: #E5E7EB;
     align-content: center;
     text-align: center;
@@ -131,15 +133,16 @@ body{
     font-style: italic;
 }
 
-.call-to-action-container{
+.generic-container{
+    justify-content:center;
+    height: 150px;
+    background-color: white;
     padding: 2% 10%;
-    height: 80%;
-    width : 80%;
-    align-items: center;
 }
 
+
 .call-to-action-card{
-    padding: 2% 10%;
+    padding: 4% 8%;
     display: flex;
     border-radius: 10px;
     background-color: #3882F6; 
@@ -157,21 +160,23 @@ body{
 
 .call-to-action-text-container .header{
     font-weight: bold;
+    font-size: 20px;
     color: white;
 }
 
 .call-to-action-text-container .subtitle{
+    font-size: 20px;
     color: darkgray;
 }
 
 .call-to-action-header-button{
     background-color: #3882F6;
     color: white;
-    border-radius: 3px; 
+    border-radius: 8px; 
     border : 2px solid white;
     padding: 10px;
     width: 100px;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     text-align: center;
 }
